m4_include([version.m4])
AC_INIT(libotcl, MAJOR_VERSION_NUMBER.MINOR_VERSION_NUMBER)
AM_INIT_AUTOMAKE

MAJOR_VER=MAJOR_VERSION_NUMBER
MINOR_VER=MINOR_VERSION_NUMBER
AC_SUBST(MAJOR_VER)
AC_SUBST(MINOR_VER)

AC_PROG_CPP
AC_PROG_LIBTOOL

SC_PATH_TCLCONFIG
SC_LOAD_TCLCONFIG

SC_PATH_TKCONFIG
SC_LOAD_TKCONFIG

SC_CONFIG_CFLAGS

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
